# tonic-data-service

./: .gitignore  Cargo.toml  README.md  index.html  modules.html
.github/workflows/: api-docs-preview.yml  api-release.yml
api/: .eslintrc.json  .gitignore  .yarnrc.yml  README.md  package.json
api/.github/workflows/: docs-preview.yml  release.yml
api/.yarn/versions/: 4a0e82a7.yml  93311ae8.yml  ff00e6bb.yml
assets/: highlight.css  search.js
classes/: TonicIndexer.html
indexer/: Cargo.toml  Justfile
indexer/migrations/2022-03-22-230442_init_indexer/: down.sql
indexer/migrations/2022-04-24-192617_add_fee_and_account_id_fields/: down.sql  up.sql
indexer/migrations/2022-05-02-162037_add_lot_size_fields/: down.sql
indexer/migrations/2022-05-04-204517_add_indices_on_fill_and_order_events/: up.sql
indexer/migrations/2022-05-04-213658_add_mat_views_for_trade_candles/: down.sql  up.sql
indexer/scripts/: prelude
indexer/src/: configs.rs  event.rs  main.rs  models.rs  schema.rs
interfaces/: Fill.html  MarketInfo.html  MarketStats.html  OrderStatus.html  RecentTrade.html  Trade.html
migrations/2022-03-22-230442_init_indexer/: up.sql
migrations/2022-05-02-162037_add_lot_size_fields/: up.sql
migrations/2022-05-04-204517_add_indices_on_fill_and_order_events/: down.sql
migrations/2022-05-05-195628_add_unique_symbols_constraint_to_market_table/: up.sql
migrations/2022-05-10-014809_add_fee_and_account_fields/: up.sql
migrations/2022-07-05-203321_add_latest_processed_block/: down.sql
src/: constants.rs  event.rs  worker.rs
(+43 files in other folders)
